src/tests/snapshots/amber__tests__optimizing__unused_variables_function.ab__bash-4.3.snap
---
source: src/tests/optimizing.rs
expression: output
---
# foo()
foo__0_v0() {
    touch "file.txt" || exit
}

foo__0_v0 
echo "The \`file.txt\` must be created even if \`a\` is not used"
